--- a/assets/component-barber-card.css
+++ b/assets/component-barber-card.css
@@ -3,6 +3,7 @@
   height: 208px;
   border-radius: 100%;
   box-shadow:0px 4px 4px rgba(0, 0, 0, 0.25);
+  object-fit: cover;
 }
 .barber-image-wrapper{
   display: flex;
