--- a/assets/component-header.css
+++ b/assets/component-header.css
@@ -47,6 +47,28 @@
   color: white;
   margin:0
 }
+.cart-page-link{
+  position: relative;
+  width: 40px;
+  height: 40px;
+  background-image: url(icon-cart.png);
+}
+.cart-count{
+  color: white;
+  border-radius: 100%;
+  background-color:#3798DB;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  line-height: 100%;
+  transform: translate(50%, -10%);
+}
 .header-logo{
   width: 95px;
   height: 43px;
@@ -61,7 +83,7 @@
   display: flex;
   list-style: none;
   padding: 0;
-  width: 70%;
+  width: 50%;
   margin: 0;
   justify-content: space-between;
 }
