--- a/sections/cupon-videos.liquid
+++ b/sections/cupon-videos.liquid
@@ -4,8 +4,7 @@
   <div class="container-main">
     <h2 class="videos-title">{{ section.settings.videos-title }}</h2>
     <p class="videos-text">
-      Few juicy sentences why this is the best gift ever you can buy + why this is the best barbershop in the city to go. Little explanation how it works, in which barber shops they can redeem gift cards, etc Little explanation how it works, in which barber shops they can redeem gift cards, etc.
-    </p>
+{{section.settings.videos-text}}</p>
     <div class="video-grid">
       <div class="video-div1">
         <div class="video-wrapper">
@@ -13,7 +12,7 @@
             <source src="{{'videoCompressed1.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay1">
-            <p class="video-length">2:35</p>
+            <p class="video-length">{{section.settings.videos-video-length-1}}</p>
             <div class="play-icon-wrapper video-section"id="play1">
               <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
             </div>
@@ -28,7 +27,7 @@
             <source src="{{'videoCompressed2.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay2">
-            <p class="video-length">1:05</p>
+            <p class="video-length">{{section.settings.videos-video-length-2}}</p>
             <div class="play-icon-wrapper video-section"id="play2">
               <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
             </div>
@@ -43,7 +42,7 @@
             <source src="{{'videoCompressed3.mp4' | asset_url }}" type="video/mp4" id="vid">
           </video>
           <div class="video-controll-overlay" id="overlay3">
-            <p class="video-length">1:00</p>
+            <p class="video-length">{{section.settings.videos-video-length-3}}</p>
             <div class="play-icon-wrapper video-section"id="play3">
               <img src="{{'playIcon.svg'| asset_url }}"  class="play-button" alt="play button">
             </div>
@@ -67,10 +66,22 @@
         "default":"YOUS SAID IT BEST"
       },
       {
+        "id": "videos-text",
+        "type": "textarea",
+        "label": "Video section text",
+        "default":"Few juicy sentences why this is the best gift ever you can buy + why this is the best barbershop in the city to go. Little explanation how it works, in which barber shops they can redeem gift cards, etc Little explanation how it works, in which barber shops they can redeem gift cards, etc."
+      },
+      {
         "id": "videos-video-title-1",
         "type": "text",
         "label": "Video 1 title",
         "default":"TITLE TITLE TITLE"
+      },
+      {
+        "id": "videos-video-length-1",
+        "type": "text",
+        "label": "Video 1 length",
+        "default":"2:35"
       },
       {
         "id": "videos-video-description-1",
@@ -85,6 +96,12 @@
         "default":"TITLE TITLE TITLE"
       },
       {
+        "id": "videos-video-length-2",
+        "type": "text",
+        "label": "Video 2 length",
+        "default":"1:05"
+      },
+      {
         "id": "videos-video-description-2",
         "type": "textarea",
         "label": "Video 2 description",
@@ -95,6 +112,12 @@
         "type": "text",
         "label": "Video 3 title",
         "default":"TITLE TITLE TITLE"
+      },
+      {
+        "id": "videos-video-length-3",
+        "type": "text",
+        "label": "Video 3 length",
+        "default":"1:00"
       },
       {
         "id": "videos-video-description-3",
