--- a/assets/section-cupon-videos.css
+++ b/assets/section-cupon-videos.css
@@ -99,6 +99,9 @@ margin:0;
     padding-top: 40px;
     padding-bottom: 40px;
   }
+  .video-wrapper{
+    height: 300px;
+  }
   .videos-title{
     font-size: 30px;
     margin-bottom: 15px;
