--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -12,9 +12,9 @@
 <div class="video-section-wrapper">
   
   <div class="frame-container">
-    <img class="bannerImg" src="{{section.settings.banner-image1| img_url: width:1440, height:960 }}" style="width:100%">
-    <img class="bannerImg" src="{{section.settings.banner-image2| img_url: width:1440, height:960 }}" style="width:100%">
-    <img class="bannerImg" src="{{section.settings.banner-image3| img_url: width:1440, height:960 }}" style="width:100%">
+    <img class="bannerImg" src="{{section.settings.banner-image1| img_url: '1440x960' }}" style="width:100%">
+    <img class="bannerImg" src="{{section.settings.banner-image2| img_url: '1440x960' }}" style="width:100%">
+    <img class="bannerImg" src="{{section.settings.banner-image3| img_url: '1440x960' }}" style="width:100%">
     <!-- <video id="bannerVid" muted autoplay loop>
       <source src="{{'walkIn.mp4' | asset_url }}" type="video/mp4" >
     </video>     -->
