removed crawler blockers

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -5,15 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap" rel="stylesheet">
+    <meta property="og:site_name" content="Brothers' Barbershop®">
+    <meta property="og:title" content="Bespoke grooming for modern Gentlemen">
+    <meta property="og:url" content="http://www.barbershop.wien">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Award-winning Barbershops in Vienna providing first-class grooming services! // Preisgekrönte Friseurläden in Wien mit erstklassigen Pflegeleistungen!">
+    <meta itemprop="name" content="Bespoke grooming for modern Gentlemen">
+    <meta itemprop="url" content="http://www.barbershop.wien">
+    <meta itemprop="description" content="Award-winning Barbershops in Vienna providing first-class grooming services! // Preisgekrönte Friseurläden in Wien mit erstklassigen Pflegeleistungen!">
+    <meta name="twitter:title" content="Bespoke grooming for modern Gentlemen">
+    <meta name="twitter:url" content="http://www.barbershop.wien">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description" content="Award-winning Barbershops in Vienna providing first-class grooming services! // Preisgekrönte Friseurläden in Wien mit erstklassigen Pflegeleistungen!">
+    <meta name="description" content="Award-winning Barbershops in Vienna providing first-class grooming 
+services! // Preisgekrönte Friseurläden in Wien mit erstklassigen 
+Pflegeleistungen!">
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | img_url: '32x32' }}">
     {%- endif -%}
