--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -76,7 +76,7 @@
         <h4 class="language-heading">EN</h4><span></span>
       </div>
       <div class="header-div2">
-        <img src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="header-logo">
+        <a href="{{ shop.url }}"><img  src="{{'logo-white.svg'| asset_url }}" alt="Brothers barbershop logo" class="header-logo"></a>
       </div>
       
       <div class="header-nav-inline header-div3">
