--- a/sections/main-transformation.liquid
+++ b/sections/main-transformation.liquid
@@ -15,19 +15,19 @@
             <div class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></div>
           </div>
           <div class="arrows">
-            <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)"><img src="{{'arrow.svg' | asset_url }}" class="prev-arrow"></div>
-            <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)"><img src="{{'arrow.svg' | asset_url }}" class="next-arrow"></div>
+            <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)"><img src="{{'arrow.svg' | asset_url }}" class="prev-arrow" alt="Previous navigation icon"></div>
+            <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)"><img src="{{'arrow.svg' | asset_url }}" class="next-arrow" alt="Next navigation icon"></div>
           </div>
         </div>
         
         <div class="mobile-controlls">
-          <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)"><img src="{{'arrow.svg' | asset_url }}" class="prev-arrow"></div>
+          <div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)"><img src="{{'arrow.svg' | asset_url }}" class="prev-arrow" alt="Previous navigation icon"></div>
           <div class="points">
             <div class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></div>
             <div class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></div>
             <div class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></div>
           </div>  
-          <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)"><img src="{{'arrow.svg' | asset_url }}" class="next-arrow"></div>
+          <div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)"><img src="{{'arrow.svg' | asset_url }}" class="next-arrow" alt="Next navigation icon"></div>
         </div>
       </div>
     </div>
