--- a/sections/main-booking.liquid
+++ b/sections/main-booking.liquid
@@ -25,7 +25,7 @@
         </div>
       </div>
     </div>
-    <a href="#" target="blank" class="button button-primary">book an appointment</a>
+    <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">book an appointment</a>
   </div>
   
 </div>
