--- a/sections/main-feeling.liquid
+++ b/sections/main-feeling.liquid
@@ -33,7 +33,7 @@
         <p class="icon-text">Renewed confidence</p>
       </div>
     </div>
-    <a href="#" class="button button-primary" style="text-align: center;">BOOK AN APPOINTMENT</a>
+    <a href="https://phorest.com/book/salons/brothersbarbershop" class="button button-primary" style="text-align: center;">BOOK AN APPOINTMENT</a>
   </div>
   
 </div>
