--- a/sections/main-video-banner.liquid
+++ b/sections/main-video-banner.liquid
@@ -3,7 +3,7 @@
   <div><h1 class="banner-heading-h1">{{ section.settings.banner-title }}</h1></div>
   
   <h3 class="banner-heading-h3">{{ section.settings.banner-subtitle }}</h3>
-  <a class="button button-primary banner-button" href="#" target="blank">BOOK AN APPOINTMENT</a>
+  <a class="button button-primary banner-button" href="https://phorest.com/book/salons/brothersbarbershop" target="blank">BOOK AN APPOINTMENT</a>
   <div class="circle1"></div>
   <div class="circle2"></div>
   <div class="circle3"></div>
