--- a/sections/services-services.liquid
+++ b/sections/services-services.liquid
@@ -46,7 +46,7 @@
           <p class="service-cost-span">{{ section.settings.haircut-cost-1 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -89,7 +89,7 @@
     <p class="service-description">{{ section.settings.haircut-description-1 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -114,7 +114,7 @@
           <p class="service-cost-span">{{ section.settings.haircut-cost-2 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -157,7 +157,7 @@
     <p class="service-description">{{ section.settings.haircut-description-2 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -182,7 +182,7 @@
           <p class="service-cost-span">{{ section.settings.haircut-cost-3 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -225,7 +225,7 @@
     <p class="service-description">{{ section.settings.haircut-description-3 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -250,7 +250,7 @@
           <p class="service-cost-span">{{ section.settings.haircut-cost-4 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -293,7 +293,7 @@
     <p class="service-description">{{ section.settings.haircut-description-4 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -318,7 +318,7 @@
           <p class="service-cost-span">{{ section.settings.haircut-cost-5 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -361,7 +361,7 @@
     <p class="service-description">{{ section.settings.haircut-description-5 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -388,7 +388,7 @@
           <p class="service-cost-span">{{ section.settings.trim-cost-1 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -431,7 +431,7 @@
     <p class="service-description">{{ section.settings.trim-description-1 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -456,7 +456,7 @@
           <p class="service-cost-span">{{ section.settings.trim-cost-2 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -499,7 +499,7 @@
     <p class="service-description">{{ section.settings.trim-description-2 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -524,7 +524,7 @@
           <p class="service-cost-span">{{ section.settings.trim-cost-3 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -567,7 +567,7 @@
     <p class="service-description">{{ section.settings.trim-description-3 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -592,7 +592,7 @@
           <p class="service-cost-span">{{ section.settings.trim-cost-4 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -635,7 +635,7 @@
     <p class="service-description">{{ section.settings.trim-description-4 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -660,7 +660,7 @@
           <p class="service-cost-span">{{ section.settings.trim-cost-5 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -703,7 +703,7 @@
     <p class="service-description">{{ section.settings.trim-description-5 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -731,7 +731,7 @@
           <p class="service-cost-span">{{ section.settings.shave-cost-1 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -774,7 +774,7 @@
     <p class="service-description">{{ section.settings.shave-description-1 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -799,7 +799,7 @@
           <p class="service-cost-span">{{ section.settings.shave-cost-2 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -842,7 +842,7 @@
     <p class="service-description">{{ section.settings.shave-description-2 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -867,7 +867,7 @@
           <p class="service-cost-span">{{ section.settings.shave-cost-3 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -910,7 +910,7 @@
     <p class="service-description">{{ section.settings.shave-description-3 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -935,7 +935,7 @@
           <p class="service-cost-span">{{ section.settings.shave-cost-4 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -978,7 +978,7 @@
     <p class="service-description">{{ section.settings.shave-description-4 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -1003,7 +1003,7 @@
           <p class="service-cost-span">{{ section.settings.shave-cost-5 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1046,8 +1046,7 @@
     <p class="service-description">{{ section.settings.shave-description-5 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
-    </div>
+v    </div>
   </div>
   {% endif %}
 </div>
@@ -1075,7 +1074,7 @@
           <p class="service-cost-span">{{ section.settings.combo-cost-1 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1118,7 +1117,7 @@
     <p class="service-description">{{ section.settings.combo-description-1 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -1143,7 +1142,7 @@
           <p class="service-cost-span">{{ section.settings.combo-cost-2 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1186,7 +1185,7 @@
     <p class="service-description">{{ section.settings.combo-description-2 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -1211,7 +1210,7 @@
           <p class="service-cost-span">{{ section.settings.combo-cost-3 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1254,7 +1253,7 @@
     <p class="service-description">{{ section.settings.combo-description-3 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -1279,7 +1278,7 @@
           <p class="service-cost-span">{{ section.settings.combo-cost-4 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1322,7 +1321,7 @@
     <p class="service-description">{{ section.settings.combo-description-4 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
@@ -1347,7 +1346,7 @@
           <p class="service-cost-span">{{ section.settings.combo-cost-5 }}</p>  
         </div>
       </div>
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
     <div class="circle-wrapper">
       <div class="circle-small"></div>
@@ -1390,7 +1389,7 @@
     <p class="service-description">{{ section.settings.combo-description-5 }}</p>
 
     <div class="service-cost-wrapper">
-      <button class="button button-primary">BOOK AN APPOINTMENT</button>
+      <a href="https://phorest.com/book/salons/brothersbarbershop" target="blank" class="button button-primary">BOOK AN APPOINTMENT</a>
     </div>
   </div>
   {% endif %}
